<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_note"
        android:orderInCategory="100"
        android:title="@string/notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_calculator"
        android:orderInCategory="100"
        android:title="@string/calculator"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/tv_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/tv_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/tv_exit"
        app:showAsAction="never" />
</menu>
