<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/initem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UserAddActivity"
    android:background="@mipmap/bg_login">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/tv_return"
            android:src="@mipmap/iv_return" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/addUser"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/tv_return"
            android:src="@mipmap/iv_return"
            android:visibility="invisible"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_addUser"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:contentDescription="@string/tv_return"
        android:src="@mipmap/icon_adduser" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/tv_show_addUser"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center|end"
            android:text="@string/user_name"
            android:textColor="@color/statusBarColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:maxLength="18"
            android:hint="@string/et_inputName"
            android:inputType=""
            >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center|end"
            android:text="@string/user_pwd"
            android:textColor="@color/statusBarColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:maxLength="10"
            android:hint="@string/et_inputPWD">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center|end"
            android:text="@string/user_gh"
            android:textColor="@color/statusBarColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etJobNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:maxLength="8"
            android:hint="@string/et_inputJN"
            android:inputType="number">
        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center|end"
            android:text="@string/user_dw"
            android:textColor="@color/statusBarColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:maxLength="18"
            android:hint="@string/et_inputCompany"
            
            android:inputType="">

        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center|end"
            android:text="@string/user_address"
            android:textColor="@color/statusBarColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:maxLength="90"
            android:inputType="text"
            android:hint="@string/et_inputAddress"
            >

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center|end"
            android:text="@string/user_con"
            android:textColor="@color/statusBarColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:maxLength="11"
            android:hint="@string/et_inputContact"
            android:inputType="text"
            >

        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center|end"
            android:text="@string/user_time"
            android:textColor="@color/statusBarColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtInTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/et_inputTime"
            android:inputType="datetime"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24">

        <Button
            android:id="@+id/addbtn"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_blue"
            android:text="@string/add"
            android:textSize="20dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout"
            app:layout_constraintVertical_bias="0.961"/>


        <Button
            android:id="@+id/cancelbtn"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_red"
            android:text="@string/canAndRe"
            android:textSize="20dp"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout"
            app:layout_constraintVertical_bias="0.961"/>

    </LinearLayout>

</LinearLayout>