<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView

        android:id="@+id/scorll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:background="@drawable/rectangle"
                android:inputType="textMultiLine"
                android:text="@string/er_title"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_22"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:background="@drawable/rectangle"
                android:inputType="textMultiLine"
                android:text="@string/er_p1"
                android:textSize="@dimen/textsize_large" />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:text="@string/er_li1"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_20"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:background="@drawable/rectangle"
                android:inputType="textMultiLine"
                android:text="@string/er_p2"
                android:textSize="@dimen/textsize_large" />


            <EditText
                android:id="@+id/et_p3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:background="@drawable/rectangle"
                android:inputType="textMultiLine"
                android:text="@string/er_p3"
                android:textSize="@dimen/textsize_large" />

            <EditText
                android:id="@+id/et_p4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:background="@drawable/rectangle"
                android:inputType="textMultiLine"
                android:text="@string/er_p4"
                android:textSize="@dimen/textsize_large" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:text="@string/er_li2"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_20"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin">

                <TableLayout
                    android:id="@+id/table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TableLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:text="@string/er_li3"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_20"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_p5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:background="@drawable/rectangle"
                android:inputType="textMultiLine"
                android:text="@string/er_p5"
                android:textSize="@dimen/textsize_large" />


            <EditText
                android:id="@+id/et_p6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:background="@drawable/rectangle"
                android:inputType="textMultiLine"
                android:text="@string/er_p6"
                android:textSize="@dimen/textsize_large" />

            <EditText
                android:id="@+id/et_p7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:background="@drawable/rectangle"
                android:inputType="textMultiLine"
                android:text="@string/er_p7"
                android:textSize="@dimen/textsize_large" />

            <EditText
                android:id="@+id/et_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:background="@drawable/rectangle"
                android:gravity="end"
                android:inputType="textMultiLine"
                android:text="@string/er_org"
                android:textSize="@dimen/textsize_large" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:background="@drawable/rectangle"
                android:gravity="end"
                android:inputType="textMultiLine"
                android:text="@string/er_date"
                android:textSize="@dimen/textsize_large" />

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="240dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/dp_48"
                android:gravity="center"
                android:background="@drawable/border_line_blue"
                android:text="@string/btn_shengcheng"
                android:textSize="@dimen/textsize_24"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view4"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:visibility="invisible"></View>
        </LinearLayout>

    </ScrollView>
</LinearLayout>